--- a/Source/Web/Hangman.Web/Views/Home/Index.cshtml
+++ b/Source/Web/Hangman.Web/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model IEnumerable<Hangman.Models.Score>
+@{
     ViewBag.Title = "Home Page";
 }
 
@@ -8,6 +9,26 @@
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
+
 <div class="row">
-    
+    <table>
+        <tr>
+            <th>Name</th>
+            <th>Won</th>
+            <th>Lost</th>
+            <th>LettersGussed</th>
+            <th>WordsGussed</th>
+        </tr>
+        @foreach (var score in Model)
+        {
+            <tr>
+                <td>@score.User.UserName</td>
+                <th>@score.Won</th>
+                <th>@score.Lost</th>
+                <th>@score.LettersGussed</th>
+                <th>@score.WordsGussed</th>
+            </tr>
+        }
+    </table>
+
 </div>
