--- a/Source/Web/Hangman.Web/Views/Home/Index.cshtml
+++ b/Source/Web/Hangman.Web/Views/Home/Index.cshtml
@@ -4,14 +4,13 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Login to play</h1>
 </div>
 
 
 <div class="row">
-    <table>
+    <h2>Current statistics for top players</h2>
+    <table border="1">
         <tr>
             <th>Name</th>
             <th>Won</th>
