--- a/Source/Web/Hangman.Web/Views/Home/Index.cshtml
+++ b/Source/Web/Hangman.Web/Views/Home/Index.cshtml
@@ -9,25 +9,33 @@
 
 
 <div class="row">
-    <h2>Current statistics for top players</h2>
-    <table border="1">
-        <tr>
-            <th>Name</th>
-            <th>Won</th>
-            <th>Lost</th>
-            <th>LettersGussed</th>
-            <th>WordsGussed</th>
-        </tr>
-        @foreach (var score in Model)
-        {
+    @if (Request.IsAuthenticated)
+    {
+
+    }
+    else
+    {
+        <h2>Current statistics for top players</h2>
+        <table border="1">
             <tr>
-                <td>@score.User.UserName</td>
-                <th>@score.Won</th>
-                <th>@score.Lost</th>
-                <th>@score.LettersGussed</th>
-                <th>@score.WordsGussed</th>
+                <th>Name</th>
+                <th>Won</th>
+                <th>Lost</th>
+                <th>LettersGussed</th>
+                <th>WordsGussed</th>
             </tr>
-        }
-    </table>
+            @foreach (var score in Model)
+            {
+                <tr>
+                    <td>@score.User.UserName</td>
+                    <th>@score.Won</th>
+                    <th>@score.Lost</th>
+                    <th>@score.LettersGussed</th>
+                    <th>@score.WordsGussed</th>
+                </tr>
+            }
+        </table>
+    }
+    
 
 </div>
