--- a/Source/Web/Hangman.Web/Views/Game/Create.cshtml
+++ b/Source/Web/Hangman.Web/Views/Game/Create.cshtml
@@ -17,7 +17,11 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    @Html.DropDownList("CategoryId", new SelectList(ViewBag.Categories, "Id", "Name"), "Select category")
+                    @Html.LabelFor(m => m.CategoryId, new { @class = "col-md-2 control-label" })
+                    <div class="col-md-10">
+                        @Html.DropDownList("CategoryId", new SelectList(ViewBag.Categories, "Id", "Name"), "Select category")
+                        @Html.ValidationMessageFor(m => m.CategoryId, "", new { @class = "text-danger" })
+                    </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
@@ -25,6 +29,11 @@
                             @Html.CheckBoxFor(m => m.Multiplayer)
                             @Html.LabelFor(m => m.Multiplayer)
                         </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Create" class="btn btn-default" />
                     </div>
                 </div>
             }
