updates on ajax call to indicate the current number of tries

--- a/Source/Web/Hangman.Web/Views/Shared/_GameVisualization.cshtml
+++ b/Source/Web/Hangman.Web/Views/Shared/_GameVisualization.cshtml
@@ -2,5 +2,5 @@
 
 <h2 id="currentwordstate">@string.Join(" ", Model.CurrentWordState)</h2>
 <h3 id="userletters">Used letters: @Model.UsedLetters</h3>
-<h4 id="movesLeft">Moves left: @Model.MovesLeft</h4>
+<h4>Moves left: <span id="movesLeft">@Model.MovesLeft</span></h4>
 <img src="@Url.Content(Model.ImageUrl)" />
