--- a/Source/Web/Hangman.Web/Views/Game/Play.cshtml
+++ b/Source/Web/Hangman.Web/Views/Game/Play.cshtml
@@ -43,35 +43,41 @@
                     $('#won').text(wonText);
                     let wordsGussedText = parseInt($('#wordsGussed').text()) + 1;
                     $('#wordsGussed').text(wordsGussedText);
-                    $('input[type="submit"]').attr('disabled', 'disabled');
+                    disableSubmitButton();
                 }
                 let updatedLettersGuessedCount = ($('#currentwordstate').text().match(/_/g) || []).length;
 
-                //changed if due to wrong whole word update of guessed letters
+                //changed if due to wrong whole word update of guessed letters appears
                 if (updatedLettersGuessedCount != currentLettersGuessedCount 
                             && response.indexOf('ImageWinWholeWord') == -1
                             && response.indexOf('ImageWinNotWholeWord') == -1
                             && response.indexOf('ImageLoose') == -1) {
-                    let lettersGussedText = parseInt($('#lettersGussed').text()) + 1;
-                    $('#lettersGussed').text(lettersGussedText);
+                    updateGuessedLetters();
                 }
 
                 if (response.indexOf('ImageWinNotWholeWord') > -1) {
-                    let updatedLettersGuessedCount = ($('#currentwordstate').text().match(/_/g) || []).length;
-                    if (updatedLettersGuessedCount != currentLettersGuessedCount) {
-                        let lettersGussedText = parseInt($('#lettersGussed').text()) + 1;
-                        $('#lettersGussed').text(lettersGussedText);
+                    let updatedLettersGuessedCountWin = ($('#currentwordstate').text().match(/_/g) || []).length;
+
+                    if (updatedLettersGuessedCountWin != currentLettersGuessedCount) {
+                        updateGuessedLetters();
                     }
                     let wonText = parseInt($('#won').text()) + 1;
                     $('#won').text(wonText);
-                    $('input[type="submit"]').attr('disabled', 'disabled');
+                    disableSubmitButton();
                 }
                 if (response.indexOf('ImageLoose') > -1) {
                     var looseText = parseInt($('#lost').text()) + 1;
                     $('#lost').text(looseText);
-                    $('input[type="submit"]').attr('disabled', 'disabled');
+                    disableSubmitButton();
                 }
             }
         });
     });
+    function updateGuessedLetters() {
+        let lettersGussedText = parseInt($('#lettersGussed').text()) + 1;
+        $('#lettersGussed').text(lettersGussedText);
+    };
+    function disableSubmitButton() {
+        $('input[type="submit"]').attr('disabled', 'disabled');
+    }
 </script>
