--- a/Source/Web/Hangman.Web/Views/Game/Play.cshtml
+++ b/Source/Web/Hangman.Web/Views/Game/Play.cshtml
@@ -18,6 +18,7 @@
 <br />
 <input type="text" name="query" />
 <input type="submit" value="Guess" />
+<span id="wrongInputMessage">You should use only letters!</span>
 <div id="word-container">
     @Html.Partial("_GameVisualization", Model.GamePlayState)
 </div>
@@ -31,7 +32,6 @@
         var useOnlyLetters = /^[a-z]+$/i;
 
         if (useOnlyLetters.test(currentGuess)) {
-
             $.ajax({
                 type: "POST",
                 url: "/Game/Guess",
@@ -72,6 +72,9 @@
                     }
                 }
             });
+        } else {
+            $('#wrongInputMessage').fadeIn(2000);
+            $('#wrongInputMessage').fadeOut(3000);
         }
     });
     function updateGuessedLetters() {
