--- a/Source/Web/Hangman.Web/Views/Game/Create.cshtml
+++ b/Source/Web/Hangman.Web/Views/Game/Create.cshtml
@@ -23,14 +23,14 @@
                         @Html.ValidationMessageFor(m => m.CategoryId, "", new { @class = "text-danger" })
                     </div>
                 </div>
-                <div class="form-group">
+                @*<div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                         <div class="checkbox">
                             @Html.CheckBoxFor(m => m.Multiplayer)
                             @Html.LabelFor(m => m.Multiplayer)
                         </div>
                     </div>
-                </div>
+                </div>*@
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
                         <input type="submit" value="Create" class="btn btn-default" />
@@ -39,12 +39,12 @@
             }
         </section>
     </div>
-    <h2>Or join an existing one</h2>
+    @*<h2>Or join an existing one</h2>
     <div class="col-md-4">
         <section id="socialLoginForm">
             @Html.ActionLink("Available multiplayer games", "Join", "Game", new { @class = "btn btn-default" })
         </section>
-    </div>
+    </div>*@
 </div>
 
 @section Scripts {
